# terrain-navigation2

./: README.md  terrain-navigation.repos
docker/: Dockerfile
mav_planning_rviz/: CMakeLists.txt  package.xml
mav_planning_rviz/include/mav_planning_rviz/: edit_button.h  goal_marker.h  planning_interactive_markers.h  planning_panel.h  pose_widget.h
mav_planning_rviz/src/: goal_marker.cpp  planning_interactive_markers.cpp  planning_panel.cpp  pose_widget.cpp
planner_msgs/: CMakeLists.txt
planner_msgs/msg/: MapInfo.msg  PathSegment.msg
terrain_navigation/: CMakeLists.txt
terrain_navigation/include/terrain_navigation/: dubins_path_segment.h  path.h  path_segment.h  primitive.h  terrain_map.h  trochoid_path_segment.h
terrain_navigation/src/: dubins_path_segment.cpp  terrain_map.cpp  trochoid_path_segment.cpp
terrain_navigation/test/: test_terrain_map.cpp  test_trajectory.cpp
terrain_navigation_ros/: CMakeLists.txt  package.xml
terrain_navigation_ros/include/terrain_navigation_ros/: terrain_navigation_mode.h  terrain_planner.h
terrain_navigation_ros/launch/: run_rosbag.launch  sitl.launch.py  terrain_planner.launch.py
terrain_navigation_ros/src/: terrain_planner.cpp  visualization.cpp
terrain_planner/: CMakeLists.txt  package.xml
terrain_planner/include/terrain_planner/: ompl_setup.h  terrain_ompl.h  terrain_ompl_rrt.h
terrain_planner/launch/: config.rviz  test_ompl_dubins_to_circle_launch.xml
terrain_planner/src/: common.cpp  terrain_ompl.cpp  terrain_ompl_rrt.cpp  test_ompl_dubins.cpp  test_ompl_dubins_to_circle.cpp  test_rrt_node.cpp  visualization.cpp
terrain_planner_benchmark/: CMakeLists.txt  README.md  package.xml
terrain_planner_benchmark/Tools/: visualize_dem.py  visualize_gps.py
terrain_planner_benchmark/launch/: config.rviz  ompl_benchmark.launch.py  test_ompl_rrt_circle_launch.xml  test_thermal_generator_launch.xml
terrain_planner_benchmark/src/: CMakeLists.txt  ompl_benchmark_node.cpp  test_rrt_circle_goal.cpp  test_sun_angle.cpp
