<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mav_planning_rviz</name>
  <version>0.0.0</version>
  <description>Planning plugin for RVIZ.</description>
  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>

  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>interactive_markers</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>planner_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
